# dp-core-phase1-substrate-v3

./: .env  .env.example  .gitignore  AGENTS.md  CHANGELOG_tuning.md  DP_EKAMNET_COGNITIVE_ARCHITECTURE_v2.md  EKAMNET_10DAY_DIAGNOSTIC_REPLAY_REPORT.md  EKAMNET_ARCHITECTURE_TO_REPLAY_INTEGRATION_FORENSIC_AUDIT.md  EKAMNET_CANDIDATE_F_COUNTERFACTUAL_EXPERIMENT_DESIGN_v0.2.md  EKAMNET_CANDIDATE_F_COUNTERFACTUAL_EXPERIMENT_DESIGN_v0.3.md  EKAMNET_CAPABILITY_MAP.md  EKAMNET_DECISION_LEDGER.md  EKAMNET_EPOCH_001_REPORT.md  EKAMNET_EPOCH_002_REPORT.md  EKAMNET_EPOCH_006_REPORT.md  EKAMNET_EPOCH_007_CLOSURE_REPAIR.md  EKAMNET_EPOCH_008_REPORT.md  EKAMNET_EPOCH_009_GATE_REDESIGN_v0.3.md  EKAMNET_EPOCH_009_REPORT.md  EKAMNET_EVIDENCE_LADDER.md  EKAMNET_EVIDENCE_LEDGER.md  EKAMNET_FULL_PROGRAM_GATE_AUDIT.md  EKAMNET_MILESTONE5_ISOLATION_REMEDIATION.md  EKAMNET_PROGRAM_STATE.md  EKAMNET_PROGRAM_STATE_v1.0_FINAL_UPDATE.md  EKAMNET_PROGRAM_STATE_v2.md  EKAMNET_REPLAY_INTEGRATION_REMEDIATION_IMPLEMENTATION_PLAN.md  EKAMNET_REPLAY_REMEDIATION_PHASE2_ONTOLOGY_RESULTS.md  EKAMNET_RESEARCH_GOVERNANCE_v1.0_FREEZE_REVIEW.md  EKAMNET_SCIENTIFICALLY_NEUTRAL_CAUSAL_INFLUENCE_AUDIT.md  HISTORICAL_DATASET_INTEGRATION.md  MILESTONE10_ARCHITECTURE_REVIEW.md  MILESTONE10_BELIEF_DYNAMICS_DESIGN.md  MILESTONE10_IMPLEMENTATION_REPORT.md  MILESTONE9_CLOSURE_REPORT.md  MILESTONE9_VALIDATION_ENGINE_IMPLEMENTATION.md  README.md  REPLAY_QUICK_REFERENCE.md  SCIENTIFIC_DEBT_REGISTER.md  all_user_inputs.txt  (+6 more)
archive/: confidence_evolution_engine.py
bench/: preflight.py  run_e2.py  run_e2_v2.py  test_bench.py
(+4213 files in other folders)
